# qt-telemetry-python

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/models/: sensor_data.py
app/services/: telemetry_service.py
app/ui/: main.qml
app/ui/components/: SensorRow.qml  StatusIndicator.qml
app/viewmodels/: dashboard_vm.py  sensor_vm.py
tests/: conftest.py  test_dashboard_vm.py  test_sensor_vm.py  test_telemetry_service.py
